--- a/package.json
+++ b/package.json
@@ -3,7 +3,13 @@
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
     "fs": "^0.0.1-security",
+    "mssql": "^11.0.1",
     "xlsx": "^0.18.5"
   },
-  "type": "module"
+  "type": "module",
+  "devDependencies": {
+    "@types/node": "^22.12.0",
+    "@types/xlsx": "^0.0.35",
+    "typescript": "^5.7.3"
+  }
 }
