--- a/sample.env
+++ b/sample.env
@@ -1,5 +1,7 @@
 # DATABASE CONNECTION DATA
-DB_SERVER       =   
-DB_NAME         =   
-DB_USER         =   
-DB_PASSWORD     =   
+DB_SERVER               =   
+DB_NAME                 =   
+DB_USER                 =   
+DB_PASSWORD             =   
+DB_ENCRYPT              =   true
+DB_TRUST_CERTIFICATE    =   true
