--- a/package.json
+++ b/package.json
@@ -2,14 +2,19 @@
   "dependencies": {
     "axios": "^1.7.9",
     "dotenv": "^16.4.7",
+    "esm": "^3.2.25",
     "fs": "^0.0.1-security",
     "mssql": "^11.0.1",
     "xlsx": "^0.18.5"
   },
-  "type": "module",
   "devDependencies": {
+    "@types/mssql": "^9.1.6",
     "@types/node": "^22.12.0",
     "@types/xlsx": "^0.0.35",
+    "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
+  },
+  "scripts": {
+    "start": "ts-node src/index.ts"
   }
 }
